# pentry

./: Cargo.toml  LICENSE.txt  README.md
doc/: search-index.js
doc/implementors/core/fmt/: trait.Debug.js
doc/pentry/: fn.find.html  index.html  sidebar-items.js  struct.Problem.html  struct.Process.html
doc/src/pentry/src/: lib.rs.html
doc/src/pentry/src/mswin/: kernel32.rs.html
docs/: search-index.js
docs/implementors/core/fmt/: trait.Display.js
docs/implementors/std/error/: trait.Error.js
docs/pentry/: fn.current.html  fn.find.html  sidebar-items.js
docs/src/pentry/src/mswin/: mod.rs.html
src/: lib.rs  mswin.rs  posix.rs
src/finder/: mswin.rs  posix.rs
src/mswin/: kernel32.rs  mod.rs
