[package]
name        = "pentry"
version     = "0.1.0"
authors     = ["chikuchikugonzalez <chikuchikugonzalez@gmail.com>"]
description = "Inspect executable of Process."
repository  = "https://github.com/chikuchikugonzalez/pentry"
license     = "MIT"

[lib]
name    = "pentry"
path    = "src/lib.rs"
test    = true
doctest = true
bench   = false
doc     = true

[[bin]]
name    = "pentry"
path    = "src/bin/pentry.rs"
test    = false
doctest = false
bench   = false
doc     = false

[dependencies]
libc    = "0.2.*"
getopts = "0.2.*"

[target.'cfg(windows)'.dependencies]

[target.'cfg(unix)'.dependencies]
procinfo = "0.2.*"
